# muhle-intelligence-gui

./: .gitmodules  CMakeLists.txt
common/: CMakeLists.txt
common/include/common/: board.hpp  subprocess.hpp
common/src/: board.cpp  subprocess.cpp
muhle_player/: CMakeLists.txt
muhle_player/src/: board.cpp  board.hpp  clock.cpp  clock.hpp  engine.cpp  engine.hpp  main.cpp  muhle_player.cpp  muhle_player.hpp  subprocess.cpp  subprocess.hpp
scripts/: run.sh  run_tester.sh  setup.bat  setup.sh  setup_optimized.bat  setup_optimized.sh
